argocd-apps/infrastructure/gateway/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: infraguid
      namespace: infraguid
      sectionName: https
  hostnames:
    - "argocd.nutritrack360.in"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
